@@ -9,6 +9,7 @@
 * Tweak - Update the minimum required PHP version to 7.0 to reflect our L-2 support policy.
 * Fix - Add support for MYR (Malaysian ringgit) for Alipay.
 * Add - Add Stripe API to generate connection tokens, manage terminal locations.
+* Fix - Hide payment request button when variations of a variable product are out-of-stock.
 
 = 5.7.0 - 2021-10-20 =
 * Fix - Enable use of saved payment methods converted to SEPA payments.
